# ndt_localizer

./: CMakeLists.txt  README.md  package.xml
cfgs/: global_ekf.yaml  jaguar.rviz  local_ekf.yaml  robot_localization.yaml  rock-auto.rviz
include/: mapLoader.h  map_loader.h  ndt.h  points_downsampler.h
launch/: jaguar.launch  lexus.launch  map_loader.launch  ndt_localizer.launch  points_downsample.launch  static_tf.launch
map/: README.md
nodes/: mapLoader.cpp  map_loader.cpp  ndt.cpp  points_downsampler.cpp  voxel_grid_filter.cpp
urdf/: jaguar.urdf  lexus.urdf
