<?xml version="1.0"?>
<package>
    <name>ndt_localizer</name>
    <version>1.7.0</version>
    <description>The ndt_localizer package</description>
    <maintainer email="shenzb12@lzu.edu.cn">adam shan</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>message_generation</run_depend>

</package>
